<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp">

    <TextView
            android:id="@+id/TitleDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"/>

    <TextView
            android:id="@+id/descriptionDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:padding="5dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_link"
            android:padding="15dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_company"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="5dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:padding="5dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_details"
            android:padding="15dp"/>

    <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp">
    </ListView>

</LinearLayout>