<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <!-- Buttons for submission or cancel -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/submitButton"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/cancelButton"/>

    </LinearLayout>

    <!-- Initial Title of Task (must fill) -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/inputtitle"
            android:text="@string/titleText" >
    </TextView>

    <EditText
            android:id="@+id/inputtitle"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <requestFocus/>
    </EditText>

    <!-- Description of Task -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/inputdescription"
            android:text="@string/descriptiontext"/>

    <EditText
            android:id="@+id/inputdescription"
            android:inputType="textCapSentences"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

    <!-- Notes for Task (Multiline) -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/inputnotes"
            android:text="@string/notestext"/>

    <EditText
            android:id="@+id/inputnotes"
            android:inputType="textMultiLine"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

    <!-- Button planned start date/time for Task (sub-dialog) -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/plannedstarttext"/>

        <Button
                android:id="@+id/inputplannedstart"
                android:layout_width="0dp"
                android:layout_weight="60"
                android:layout_height="wrap_content"
                android:text=""/>

    </LinearLayout>

    <!-- Button actual start date/time for Task (sub-dialog) -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/startdatetext"/>

        <Button
                android:id="@+id/inputstarted"
                android:layout_width="0dp"
                android:layout_weight="60"
                android:layout_height="wrap_content"
                android:text=""/>
    </LinearLayout>

    <!-- Percentage complete for Task -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:labelFor="@+id/inputpercentage"
                android:text="@string/percentagetext"/>

        <EditText
                android:id="@+id/inputpercentage"
                android:inputType="number"
                android:layout_width="0dip"
                android:layout_weight="40"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <!-- Button target date/time for Task (sub-dialog) -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/targetdatetext"/>

        <Button
                android:id="@+id/inputtargetdate"
                android:layout_width="0dp"
                android:layout_weight="60"
                android:layout_height="wrap_content"
                android:text=""/>
    </LinearLayout>

</LinearLayout>