<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titletext" />
    
	<EditText android:id="@+id/inputtitle"
		android:inputType="text"
    	android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	
	    <requestFocus/>
	</EditText>
	
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descriptiontext" />
    
	<EditText android:id="@+id/inputdescription"
	    android:inputType="text"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"/>
	
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notestext" />
    
	<EditText android:id="@+id/inputnotes"
	    android:inputType="textMultiLine"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"/>
	
	<Button android:id="@+id/submit"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/submitButton" />
		
</LinearLayout>